--- a/package.json
+++ b/package.json
@@ -26,14 +26,22 @@
         "@capacitor/android": "^2.4.4",
         "@capacitor/cli": "^2.4.4",
         "@capacitor/core": "^2.4.4",
+        "@codetrix-studio/capacitor-google-auth": "^2.1.3",
+        "@fortawesome/angular-fontawesome": "^0.7.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-brands-svg-icons": "^5.13.0",
+        "@fortawesome/free-regular-svg-icons": "^5.13.0",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@ionic-native/core": "^5.30.0",
         "@ionic-native/http": "^5.30.0",
         "@ionic-native/splash-screen": "^5.30.0",
         "@ionic-native/status-bar": "^5.30.0",
         "@ionic/angular": "^5.5.2",
         "@ionic/storage": "^2.2.0",
+        "@rdlabo/capacitor-facebook-login": "^2.0.3",
         "@sentry/browser": "^5.29.0",
         "cordova-plugin-advanced-http": "^3.1.0",
+        "cordova-plugin-file": "^6.0.2",
         "core-js": "^2.6.12",
         "moment": "^2.29.1",
         "rxjs": "~6.5.1",
