--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@ionic/angular": "^5.5.2",
         "@ionic/storage": "^2.2.0",
         "@rdlabo/capacitor-facebook-login": "^2.0.3",
+        "@rxweb/reactive-form-validators": "^2.1.2",
         "@sentry/browser": "^5.29.0",
         "cordova-plugin-advanced-http": "^3.1.0",
         "cordova-plugin-file": "^6.0.2",
