--- a/package.json
+++ b/package.json
@@ -1,83 +1,83 @@
 {
-    "name": "klikgo",
-    "version": "0.0.1",
-    "author": "Ionic Framework",
-    "homepage": "https://ionicframework.com/",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test --coverage",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "tslint-check": "tslint-config-prettier-check ./tslint.json",
-        "mock:server": "json-server --watch mocks/dummy-data.json --routes mocks/routes.json --middlewares mocks/middleware.js",
-        "build:android": "ionic build --prod && npx cap sync android && npx cap open android"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/common": "~10.0.0",
-        "@angular/core": "~10.0.0",
-        "@angular/forms": "~10.0.0",
-        "@angular/platform-browser": "~10.0.0",
-        "@angular/platform-browser-dynamic": "~10.0.0",
-        "@angular/router": "~10.0.0",
-        "@auth0/angular-jwt": "^5.0.2",
-        "@capacitor/android": "^2.4.4",
-        "@capacitor/cli": "^2.4.4",
-        "@capacitor/core": "^2.4.4",
-        "@codetrix-studio/capacitor-google-auth": "^2.1.3",
-        "@fortawesome/angular-fontawesome": "^0.7.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.28",
-        "@fortawesome/free-brands-svg-icons": "^5.13.0",
-        "@fortawesome/free-regular-svg-icons": "^5.13.0",
-        "@fortawesome/free-solid-svg-icons": "^5.13.0",
-        "@ionic-native/core": "^5.30.0",
-        "@ionic-native/http": "^5.30.0",
-        "@ionic-native/splash-screen": "^5.30.0",
-        "@ionic-native/status-bar": "^5.30.0",
-        "@ionic/angular": "^5.5.2",
-        "@ionic/storage": "^2.2.0",
-        "@rdlabo/capacitor-facebook-login": "^2.0.3",
-        "@sentry/browser": "^5.29.0",
-        "cordova-plugin-advanced-http": "^3.1.0",
-        "cordova-plugin-file": "^6.0.2",
-        "core-js": "^2.6.12",
-        "moment": "^2.29.1",
-        "rxjs": "~6.5.1",
-        "tslib": "^1.14.1",
-        "zone.js": "~0.10.2"
-    },
-    "devDependencies": {
-        "@angular-builders/jest": "^10.0.0",
-        "@angular-devkit/build-angular": "^0.1100.4",
-        "@angular/cli": "~10.0.5",
-        "@angular/compiler": "~10.0.0",
-        "@angular/compiler-cli": "~10.0.0",
-        "@angular/language-service": "~10.0.0",
-        "@ionic/angular-toolkit": "^2.1.1",
-        "@types/jest": "^26.0.19",
-        "@types/node": "^12.19.9",
-        "codelyzer": "^6.0.0",
-        "husky": "^4.3.5",
-        "istanbul-reports": "^3.0.0",
-        "jest": "^26.6.3",
-        "jest-createspyobj": "^1.2.2",
-        "jest-preset-angular": "^8.3.2",
-        "jest-sonar-reporter": "^2.0.0",
-        "json-server": "^0.16.3",
-        "ngx-wallaby-jest": "0.0.2",
-        "protractor": "~5.4.0",
-        "ts-node": "~7.0.0",
-        "tslint": "~6.1.0",
-        "tslint-config-prettier": "^1.18.0",
-        "typescript": "~3.9.5"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "ng lint && npm test",
-            "pre-push": "ng build --aot true"
-        }
-    },
-    "description": "An Ionic project"
+  "name": "klikgo",
+  "version": "0.0.1",
+  "author": "Ionic Framework",
+  "homepage": "https://ionicframework.com/",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test --coverage",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "mock:server": "json-server --watch mocks/dummy-data.json --routes mocks/routes.json --middlewares mocks/middleware.js",
+    "build:android": "ionic build --prod && npx cap sync android && npx cap open android"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/common": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
+    "@auth0/angular-jwt": "^5.0.2",
+    "@capacitor/android": "^2.4.4",
+    "@capacitor/cli": "^2.4.4",
+    "@capacitor/core": "^2.4.4",
+    "@codetrix-studio/capacitor-google-auth": "^2.1.3",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ionic-native/core": "^5.30.0",
+    "@ionic-native/http": "^5.30.0",
+    "@ionic-native/splash-screen": "^5.30.0",
+    "@ionic-native/status-bar": "^5.30.0",
+    "@ionic/angular": "^5.5.2",
+    "@ionic/storage": "^2.2.0",
+    "@rdlabo/capacitor-facebook-login": "^2.0.3",
+    "@sentry/browser": "^5.29.0",
+    "cordova-plugin-advanced-http": "^3.1.0",
+    "cordova-plugin-file": "^6.0.2",
+    "core-js": "^2.6.12",
+    "moment": "^2.29.1",
+    "rxjs": "~6.5.1",
+    "tslib": "^1.14.1",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-builders/jest": "^10.0.0",
+    "@angular-devkit/build-angular": "^0.1100.4",
+    "@angular/cli": "~10.0.5",
+    "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@angular/language-service": "~10.0.0",
+    "@ionic/angular-toolkit": "^2.1.1",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^12.19.9",
+    "codelyzer": "^6.0.0",
+    "husky": "^4.3.5",
+    "istanbul-reports": "^3.0.0",
+    "jest": "^26.6.3",
+    "jest-createspyobj": "^1.2.2",
+    "jest-preset-angular": "^8.3.2",
+    "jest-sonar-reporter": "^2.0.0",
+    "json-server": "^0.16.3",
+    "ngx-wallaby-jest": "0.0.2",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.1.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "~3.9.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "ng lint",
+      "pre-push": "ng build --aot true"
+    }
+  },
+  "description": "An Ionic project"
 }
