profile page wireframe implementation

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@fortawesome/free-brands-svg-icons": "^5.13.0",
         "@fortawesome/free-regular-svg-icons": "^5.13.0",
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "@ionic-native/app-version": "^5.30.0",
         "@ionic-native/core": "^5.30.0",
         "@ionic-native/http": "^5.30.0",
         "@ionic-native/splash-screen": "^5.30.0",
@@ -42,6 +43,7 @@
         "@rxweb/reactive-form-validators": "^2.1.2",
         "@sentry/browser": "^5.29.0",
         "cordova-plugin-advanced-http": "^3.1.0",
+        "cordova-plugin-app-version": "^0.1.12",
         "cordova-plugin-file": "^6.0.2",
         "core-js": "^2.6.12",
         "moment": "^2.29.1",
