--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -11,7 +11,7 @@ apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
     implementation project(':codetrix-studio-capacitor-google-auth')
     implementation project(':rdlabo-capacitor-facebook-login')
-
+    implementation "com.android.support:support-v4:27.+"
 }
 apply from: "../../node_modules/cordova-plugin-qrscanner/src/android/qrscanner.gradle"
 
