--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
-        "build": "ng build && npx cap sync android && npx cap open android",
+        "build": "npx jetifier && ng build && npx cap sync android && npx cap open android",
         "test": "ng test --coverage",
         "lint": "ng lint",
         "e2e": "ng e2e",
@@ -34,7 +34,9 @@
         "@fortawesome/free-solid-svg-icons": "^5.13.0",
         "@ionic-native/android-permissions": "^5.30.0",
         "@ionic-native/app-version": "^5.30.0",
+        "@ionic-native/camera": "^5.31.1",
         "@ionic-native/core": "^5.30.0",
+        "@ionic-native/file": "^5.31.1",
         "@ionic-native/http": "^5.30.0",
         "@ionic-native/qr-scanner": "^5.30.0",
         "@ionic-native/splash-screen": "^5.30.0",
@@ -48,10 +50,10 @@
         "cordova-plugin-advanced-http": "^3.1.0",
         "cordova-plugin-android-permissions": "^1.1.2",
         "cordova-plugin-app-version": "^0.1.12",
+        "cordova-plugin-camera": "^5.0.1",
         "cordova-plugin-file": "^6.0.2",
         "cordova-plugin-qrscanner": "^3.0.1",
         "core-js": "^2.6.12",
-        "jetifier": "^1.6.6",
         "moment": "^2.29.1",
         "ng-otp-input": "^1.7.1",
         "rxjs": "~6.5.1",
@@ -75,6 +77,7 @@
         "jest-createspyobj": "^1.2.2",
         "jest-preset-angular": "^8.3.2",
         "jest-sonar-reporter": "^2.0.0",
+        "jetifier": "^1.6.6",
         "json-server": "^0.16.3",
         "ngx-wallaby-jest": "0.0.2",
         "protractor": "~5.4.0",
