--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@ionic-native/camera": "^5.31.1",
     "@ionic-native/core": "^5.30.0",
     "@ionic-native/file": "^5.31.1",
+    "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/http": "^5.30.0",
+    "@ionic-native/native-geocoder": "^5.31.1",
     "@ionic-native/qr-scanner": "^5.30.0",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.30.0",
@@ -52,6 +54,8 @@
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-camera": "^5.0.1",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.6.12",
     "moment": "^2.29.1",
