--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -9,6 +9,7 @@ android {
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':capacitor-community-fcm')
     implementation project(':codetrix-studio-capacitor-google-auth')
     implementation project(':rdlabo-capacitor-facebook-login')
     implementation "com.android.support:support-v4:27.+"
