--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@auth0/angular-jwt": "^5.0.2",
+    "@capacitor-community/fcm": "^1.1.0",
     "@capacitor/android": "^2.4.4",
     "@capacitor/cli": "^2.4.4",
     "@capacitor/core": "^2.4.4",
