--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -13,8 +13,9 @@ dependencies {
     implementation project(':codetrix-studio-capacitor-google-auth')
     implementation project(':rdlabo-capacitor-facebook-login')
     implementation "com.android.support:support-v4:27.+"
+    implementation "com.android.support:support-v4:27.+"
 }
-apply from: "../../node_modules/cordova-plugin-qrscanner/src/android/qrscanner.gradle"
+apply from: "../../node_modules/phonegap-plugin-barcodescanner/src/android/barcodescanner.gradle"
 
 if (hasProperty('postBuildExtras')) {
   postBuildExtras()
