--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,18 +1,16 @@
 {
-    "appId": "com.klikgo.klikgo",
-    "appName": "Klikgo",
-    "bundledWebRuntime": false,
-    "npmClient": "npm",
-    "webDir": "www",
-    "cordova": {},
-    "plugins": {
-        "GoogleAuth": {
-            "scopes": [
-                "profile",
-                "email"
-            ],
-            "serverClientId": "682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com",
-            "forceCodeForRefreshToken": true
-        }
+  "appId": "com.klikgo.klikgo",
+  "appName": "Klikgo",
+  "bundledWebRuntime": false,
+  "npmClient": "npm",
+  "webDir": "www",
+  "cordova": {},
+  "plugins": {
+    "GoogleAuth": {
+      "scopes": ["profile", "email"],
+      "serverClientId": "682784712996-65cbu37faq1lu6lc94erb48uf53cdka9.apps.googleusercontent.com",
+      "forceCodeForRefreshToken": true
     }
+  },
+  "linuxAndroidStudioPath": "/home/dra/android-studio/bin/studio.sh"
 }
