--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ionic-native/android-permissions": "^5.30.0",
     "@ionic-native/app-version": "^5.30.0",
+    "@ionic-native/barcode-scanner": "^5.31.1",
     "@ionic-native/camera": "^5.31.1",
     "@ionic-native/core": "^5.30.0",
     "@ionic-native/file": "^5.31.1",
     "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/http": "^5.30.0",
     "@ionic-native/native-geocoder": "^5.31.1",
-    "@ionic-native/qr-scanner": "^5.30.0",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.30.0",
     "@ionic/angular": "^5.5.2",
@@ -55,15 +55,16 @@
     "@techiediaries/ngx-qrcode": "^9.1.0",
     "cordova-plugin-advanced-http": "^3.1.0",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-app-version": "^0.1.12",
     "cordova-plugin-camera": "^5.0.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
-    "cordova-plugin-qrscanner": "^3.0.1",
     "core-js": "^2.6.12",
     "moment": "^2.29.1",
     "ng-otp-input": "^1.7.1",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "~6.5.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
