Feature/social login #1 (#89)
* implement deeplink & set forgot password

* set password page routing

* implement google login & register

* implement api check reset password token

* implement verify email

* fix calculate price on checkout page

* fix cache profile picture

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="@string/custom_url_scheme" />
+                <data android:scheme="http" android:host="@string/custom_host_scheme" />
+                <data android:scheme="https" android:host="@string/custom_host_scheme" />
             </intent-filter>
 
         </activity>
