--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ionic-native/barcode-scanner": "^5.31.1",
     "@ionic-native/camera": "^5.31.1",
     "@ionic-native/core": "^5.30.0",
+    "@ionic-native/deeplinks": "^5.30.0",
     "@ionic-native/file": "^5.31.1",
     "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/http": "^5.30.0",
@@ -62,6 +63,7 @@
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "core-js": "^2.6.12",
+    "ionic-plugin-deeplinks": "^1.0.22",
     "moment": "^2.29.1",
     "ng-otp-input": "^1.7.1",
     "phonegap-plugin-barcodescanner": "^8.1.0",
