--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ionic-native/file": "^5.31.1",
     "@ionic-native/geolocation": "^5.31.1",
     "@ionic-native/http": "^5.30.0",
+    "@ionic-native/market": "^5.31.1",
     "@ionic-native/native-geocoder": "^5.31.1",
     "@ionic-native/splash-screen": "^5.30.0",
     "@ionic-native/status-bar": "^5.30.0",
@@ -61,6 +62,7 @@
     "cordova-plugin-camera": "^5.0.1",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-geolocation": "^4.1.0",
+    "cordova-plugin-market": "^1.2.0",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "core-js": "^2.6.12",
     "ionic-plugin-deeplinks": "^1.0.22",
