Remove spinner image, faster pull to refresh variable

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -14,7 +14,7 @@
     "SplashScreen": {
       "launchAutoHide": true,
       "androidScaleType": "CENTER_CROP",
-      "showSpinner": true
+      "showSpinner": false
     }
   },
   "linuxAndroidStudioPath": "/home/dra/android-studio/bin/studio.sh"
